--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <p>For bookings and inquiries, please reach out to us:</p>
                     <ul>
                         <li>Phone: <a href="tel:+919335781223">9335781223</a></li>
-                        <li>Email: <a href="mailto:Maakalyanigirlshostel@gmail.com">Maakalyanigirlshostel@gmail.com</a></li>
+                        <li>Email: <a href="mailto:maakalyanigirlshostel@gmail.com">Maakalyanigirlshostel@gmail.com</a></li>
                         <li>Address: <a href="https://www.google.com/maps/search/?api=1&query=A11%2F80+Naya+Mahadev%2C+Rajghat%2C+Varanasi+-+221001" target="_blank">A11/80 Naya Mahadev, Rajghat , Varanasi - 221001</a></li>
                     </ul>
                 </div>
