--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="nav-brand">Maa Kalyani</a>
+            <a href="#" class="nav-brand">
+                <img src="images/logo.png" alt="Maa Kalyani Logo" class="nav-logo">
+                Maa Kalyani
+            </a>
             <button class="menu-toggle" aria-label="Toggle navigation menu">☰</button>
             <ul class="nav-links">
                 <li><a href="#rooms">Rooms</a></li>
